Добавлен блокнот для тестирования получения Фурье образа с помощью линзы

--- a/collab/LensFourierTest.ipynb
+++ b/collab/LensFourierTest.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOtTXHnym9CaNRtvl2OTkyI",
+      "authorship_tag": "ABX9TyOHlVcto5hQr7IuMGlmkxtp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,24 +24,23 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Belashov641618/DNN/blob/main/Untitled2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Belashov641618/DNN/blob/main/collab/LensFourierTest.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ybHXhiNRyjsL"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import torch"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "source": [],
       "metadata": {
         "id": "5DiXfYY22OGN"
       },
